Local/microservices-new.yaml
# Sever 
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: server-dp
    env: dev
    tier: back-end
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
      env: dev
      tier: back-end
  template:
    metadata:
      labels:
        app: server
        env: dev
        tier: back-end
    spec:
      containers:
      - image: ivt-server:latest
        name: server
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: server
    env: dev
    tier: back-end
  name: server-svc
spec:
  ports:
  - name: httl
    port: 3003
    protocol: TCP
    targetPort: 3003
  selector:
    app: server
    env: dev
    tier: back-end
  type: NodePort
---

# Client 
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: client-dp
    env: dev
    tier: front-end
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
      env: dev
      tier: front-end
  template:
    metadata:
      labels:
        app: client
        env: dev
        tier: front-end
    spec:
      containers:
      - image: ivt-client:latest
        name: client
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: client
    env: dev
    tier: front-end
  name: client-svc
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: client
    env: dev
    tier: front-end
  type: NodePort
---
# Developer 
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: developer-dp
    env: dev
    tier: front-end
  name: developer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: developer
      env: dev
      tier: front-end
  template:
    metadata:
      labels:
        app: developer
        env: dev
        tier: front-end
    spec:
      containers:
      - image: ivt-developer:latest
        name: developer
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: developer
    env: dev
    tier: front-end
  name: developer-svc
spec:
  ports:
  - name: http
    port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: developer
    env: dev
    tier: front-end
  type: NodePort
