Local/nginx-ingress-ctl.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
---

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  labels:
    app: nginx-ingress
  # namespace: default
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      serviceAccountName: nginx-ingress-serviceaccount
      containers:
      - name: nginx-ingress-controller
        image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.33.0
        args:
        - /nginx-ingress-controller
        - --configmap=$(POD_NAMESPACE)/nginx-configuration
        # - --tcp-services-configmap=$(POD_NAMESPACE)/tcp-services
        # - --udp-services-configmap=$(POD_NAMESPACE)/udp-services
        # - --publish-service=$(POD_NAMESPACE)/ingress-nginx
        # - --annotations-prefix=nginx.ingress.kubernetes.io
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  # namespace: default
  namespace: ingress-nginx
  labels:
    app: nginx-ingress
spec:
  type: LoadBalancer
  selector:
    app: nginx-ingress
  ports:
  - port: 80
    name: http
    targetPort: 80
  - port: 443
    name: https
    targetPort: 443
