Local/ingress.yaml
# ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ivt-ingress
  namespace: ingress-nginx
spec:
  tls:
  - hosts:
    - tls-secret 
    secretName: tls-certificate
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: client-svc
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: server-svc
            port:
              number: 80
      - path: /dev
        pathType: Prefix
        backend:
          service:
            name: developer-svc
            port:
              number: 80


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: my-ingress
# spec:
#   tls:
#   - hosts:
#     - myapp.mydomain.com
#     secretName: server-certificate
#   rules:
#   - host: myapp.mydomain.com
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: server-dp
#             port:
#               number: 80

# ---
# apiVersion: v1
# kind: Secret
# metadata:
#   name: server-certificate
# type: kubernetes.io/tls
# data:
#   tls.crt: base64-encoded-certificate
#   tls.key: base64-encoded-key

# apiVersion: v1
# data:
#   tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURDVENDQWZHZ0F3SUJBZ0lVV1dzSmxjc05pUmZKRHF1U3IwTEJSY0tway9Vd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZERVNNQkFHQTFVRUF3d0piRzlqWVd4b2IzTjBNQjRYRFRJME1EVXlOakExTVRJd05Wb1hEVEkxTURVeQpOakExTVRJd05Wb3dGREVTTUJBR0ExVUVBd3dKYkc5allXeG9iM04wTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGCkFBT0NBUThBTUlJQkNnS0NBUUVBb08rTkk1cWs1RGRRVitRN2tNZVhuSytOV0h2TlRCL2RDSVZ2Sy9iOUF3UjYKdWdSYjk0d0xJZFVuaTZpdytseVJvc2RTQ2VGc1pxdTBaTHA3L3Q4WFBkMFFsWnN0WUNyTmJra3N3RmRvVit4WApHY3ArczhONEpuNlZ [...]
#   tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2QUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktZd2dnU2lBZ0VBQW9JQkFRQ2c3NDBqbXFUa04xQlgKNUR1UXg1ZWNyNDFZZTgxTUg5MEloVzhyOXYwREJIcTZCRnYzakFzaDFTZUxxTEQ2WEpHaXgxSUo0V3htcTdSawp1bnYrM3hjOTNSQ1ZteTFnS3MxdVNTekFWMmhYN0ZjWnluNnp3M2dtZnBWUkNndTUvZjNudnJtcCtDaklmU0xNCkZ4akJwT2JMcXhRdmVnZk9zaHZOdFZ0L3Q1dXdUSmVWQlF1SlVjN3BQS1hHTk1JSVorN09vRjAzZlhlcUlta1cKMFUxNmVIUktnSTU0cDJYVEs4bkRSUVJWQjBJaXV2ZnNBcEZuZDRyMHExN1Q4Z2M0M0l6SnVDZGNrYmxYK0Y0YQp5STRIZ1FCRW5lRFV [...]
# kind: Secret
# metadata:
#   name: tls-secret
# type: kubernetes.io/tls
